<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="imsdk_uikit_empty_text_hint" />
    <string name="imsdk_uikit_conversation_title">消息</string>
    <string name="imsdk_uikit_chat_input_hint">发送聊天内容</string>
    <string name="imsdk_uikit_chat_input_submit">发送</string>
    <string name="imsdk_uikit_tip_text_network_error">网络不给力</string>
    <string name="imsdk_uikit_tip_text_error_unknown">操作失败</string>
    <string name="imsdk_uikit_tip_require_permission_storage">缺少存储权限</string>
    <string name="imsdk_uikit_tip_success_add_to_media_store">已添加到相册</string>
    <string name="imsdk_uikit_tip_download_success">下载成功</string>
    <string name="imsdk_uikit_tip_download_fail">下载失败</string>
    <string name="imsdk_uikit_tip_image_invalid">图片无效</string>
    <string name="imsdk_uikit_tip_image_too_large">图片太大</string>
    <string name="imsdk_uikit_tip_video_invalid">视频无效</string>
    <string name="imsdk_uikit_tip_video_too_short">视频太短</string>
    <string name="imsdk_uikit_tip_video_too_large">视频太大</string>
    <string name="imsdk_uikit_tip_only_allow_image_or_video">仅支持图片或者视频</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_flash_image">闪照</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media">相册</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_bucket_all">图片和视频</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_picker_submit_format">发送(%1$s)</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_picker_submit_0">发送</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_picker_preview_format">预览(%1$s)</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_picker_preview_0">预览</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_media_picker_pager_select">选择</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_rtc_audio">语音通话</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_rtc_video">视频通话</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_location">位置</string>
    <string name="imsdk_uikit_custom_soft_keyboard_item_snapchat">阅后即焚</string>
    <string name="imsdk_uikit_hint_location_pick_position">位置</string>
    <string name="imsdk_uikit_hint_location_pick_position_near_100">100m内</string>
    <string name="imsdk_uikit_menu_copy">复制</string>
    <string name="imsdk_uikit_menu_recall">撤回</string>
    <string name="imsdk_uikit_menu_delete">删除</string>
    <string name="imsdk_uikit_recall_send_message">你撤回了一条消息</string>
    <string name="imsdk_uikit_recall_received_message">%1$s撤回了一条消息</string>
    <string name="imsdk_uikit_hint_network_error_retry">请检查网络连接后重试</string>
    <string name="imsdk_uikit_hint_network_error">网络错误</string>
    <string name="imsdk_uikit_hint_refresh_retry">点击刷新试试</string>
    <string name="imsdk_uikit_hint_no_more">没有更多了</string>
    <string name="imsdk_uikit_select_api_server_lru">选择最近使用的地址</string>
    <string name="imsdk_uikit_button_text_cancel">取消</string>
    <string name="imsdk_uikit_button_text_submit">确认</string>
    <string name="imsdk_uikit_profile_modify_gold">是否付费</string>
    <string name="imsdk_uikit_profile_modify_verify">是否认证</string>
    <string name="imsdk_uikit_tip_message_delivered">已送达</string>
    <string name="imsdk_uikit_tip_message_read">已读</string>
    <string name="imsdk_uikit_voice_record_text_input">按住 说话</string>
    <string name="imsdk_uikit_voice_record_down_cancel_send">手指上滑，取消发送</string>
    <string name="imsdk_uikit_voice_record_say_time_short">说话时间太短</string>
    <string name="imsdk_uikit_voice_record_fail">录音失败</string>
    <string name="imsdk_uikit_voice_record_up_cancel_send">松开手指，取消发送</string>
    <string name="imsdk_uikit_hint_being_typed">对方正在输入..</string>
    <string name="imsdk_uikit_rtc_microphone_on">麦克风已开</string>
    <string name="imsdk_uikit_rtc_microphone_off">麦克风已关</string>
    <string name="imsdk_uikit_rtc_speaker_on">扬声器已开</string>
    <string name="imsdk_uikit_rtc_speaker_off">扬声器已关</string>
    <string name="imsdk_uikit_rtc_hangup">挂断</string>
    <string name="imsdk_uikit_rtc_accept">接听</string>
    <string name="imsdk_uikit_rtc_state_hint_text_waiting_for_target_accept">正在等待对方接收邀请</string>
    <string name="imsdk_uikit_rtc_state_hint_text_empty" />
    <string name="imsdk_uikit_rtc_state_hint_text_received_audio">邀请你进行语音通话..</string>
    <string name="imsdk_uikit_rtc_state_hint_text_received_video">邀请你进行视频通话..</string>
    <string name="imsdk_uikit_rtc_state_hint_text_connecting">正在建立链接..</string>
    <string name="imsdk_uikit_rtc_state_hint_text_connected">已接通</string>
    <string name="imsdk_uikit_rtc_state_hint_text_error_myself">遇到系统错误</string>
    <string name="imsdk_uikit_rtc_state_hint_text_error_target">对方发生系统错误</string>
    <string name="imsdk_uikit_rtc_state_hint_text_unknown_myself">遇到未知错误</string>
    <string name="imsdk_uikit_rtc_state_hint_text_unknown_target">对方发生未知错误</string>
    <string name="imsdk_uikit_rtc_state_hint_text_cancel_myself">已取消</string>
    <string name="imsdk_uikit_rtc_state_hint_text_cancel_target">对方已取消</string>
    <string name="imsdk_uikit_rtc_state_hint_text_reject_myself">已拒绝接听</string>
    <string name="imsdk_uikit_rtc_state_hint_text_reject_target">对方拒绝接听</string>
    <string name="imsdk_uikit_rtc_state_hint_text_timeout_myself">已超时</string>
    <string name="imsdk_uikit_rtc_state_hint_text_timeout_target">对方超时未接听</string>
    <string name="imsdk_uikit_rtc_state_hint_text_hangup_myself">已挂断</string>
    <string name="imsdk_uikit_rtc_state_hint_text_hangup_target">对方已挂断</string>
    <string name="imsdk_uikit_rtc_state_hint_text_linebusy_target">对方正忙</string>
    <string name="imsdk_uikit_chat_room_settings_title">聊天室设置</string>
    <string name="imsdk_uikit_chat_room_settings_member_list">成员列表</string>
    <string name="imsdk_uikit_chat_room_settings_name">聊天室名称</string>
    <string name="imsdk_uikit_chat_room_settings_tod">聊天室公告</string>
    <string name="imsdk_uikit_chat_room_settings_leave">退出聊天室</string>
    <string name="imsdk_uikit_tip_chat_room_context_is_null">你当前不在聊天室内</string>
    <string name="imsdk_uikit_tip_chat_room_name_modify_limit">聊天室名称仅支持在管理平台修改</string>
    <string name="imsdk_uikit_hint_chat_room_tod_only_edit_by_admin">聊天室公告只允许管理员编辑</string>
    <string name="imsdk_uikit_chat_room_leave_confirm_text">退出聊天室？</string>
    <string name="imsdk_uikit_chat_room_edit_tod_title">编辑聊天室公告</string>
    <string name="imsdk_uikit_chat_room_edit_tod_submit">保存</string>
    <string name="imsdk_uikit_hint_chat_room_tod_edit_text">编辑聊天室公告</string>
    <string name="imsdk_uikit_chat_room_member_list_title">聊天室在线用户</string>
    <string name="imsdk_uikit_chat_room_member_list_title_format">聊天室在线用户（%s）</string>
    <string name="imsdk_uikit_chat_room_member_role_admin">管理员</string>
    <string name="imsdk_uikit_chat_room_member_role_tmp_admin">临时管理员</string>
    <string name="imsdk_uikit_chat_room_member_mute">禁言</string>
    <string name="imsdk_uikit_text_cancel">取消</string>
    <string name="imsdk_uikit_text_send">发送</string>
    <string name="imsdk_uikit_text_location_info">位置信息</string>
    <string name="imsdk_uikit_rtc_message_info_cancel_received">对方已取消</string>
    <string name="imsdk_uikit_rtc_message_info_cancel_send">已取消</string>
    <string name="imsdk_uikit_rtc_message_info_reject_received">已拒绝</string>
    <string name="imsdk_uikit_rtc_message_info_reject_send">对方已拒绝</string>
    <string name="imsdk_uikit_rtc_message_info_timeout_received">无应答</string>
    <string name="imsdk_uikit_rtc_message_info_timeout_send">对方无应答</string>
    <string name="imsdk_uikit_rtc_message_info_linebusy_received">忙线未接听</string>
    <string name="imsdk_uikit_rtc_message_info_linebusy_send">对方忙线未接听</string>
    <string name="imsdk_uikit_rtc_message_info_duration_format">通话时长：%1$s</string>
</resources>