<?xml version="1.0" encoding="utf-8"?>
<io.github.idonans.systeminsets.SystemInsetsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:systemInsetPaddingBottom="all"
    app:systemInsetPaddingBottomNotConsume="true"
    app:systemInsetPaddingTop="all"
    app:systemInsetPaddingTopNotConsume="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2F4F5"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/top_bar_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/imsdk_uikit_empty_text_hint"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/imsdk_uikit_ic_arrow_left" />

            <TextView
                android:id="@+id/top_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/imsdk_uikit_chat_room_settings_title"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/imsdk_uikit_color_divider_line" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <FrameLayout
            android:id="@+id/member_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/imsdk_uikit_chat_room_settings_member_list"
                android:textColor="#333333"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imsdk_uikit_empty_text_hint"
                android:src="@drawable/imsdk_uikit_ic_arrow_right_black_tiny" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/imsdk_uikit_color_divider_line" />

        <FrameLayout
            android:id="@+id/chat_room_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/imsdk_uikit_chat_room_settings_name"
                android:textColor="#333333"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imsdk_uikit_empty_text_hint"
                android:src="@drawable/imsdk_uikit_ic_arrow_right_black_tiny" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/imsdk_uikit_color_divider_line" />

        <FrameLayout
            android:id="@+id/chat_room_tod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/imsdk_uikit_chat_room_settings_tod"
                android:textColor="#333333"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imsdk_uikit_empty_text_hint"
                android:src="@drawable/imsdk_uikit_ic_arrow_right_black_tiny" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/imsdk_uikit_color_divider_line" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/leave_chat_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/imsdk_uikit_button_background_selector"
            android:includeFontPadding="false"
            android:text="@string/imsdk_uikit_chat_room_settings_leave"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</io.github.idonans.systeminsets.SystemInsetsLinearLayout>
